--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 // @import 'variables';
 
 // Bootstrap
-@import "node_modules/bootswatch/dist/flatly/variables";
+@import "node_modules/bootswatch/dist/litera/variables";
 @import '~bootstrap/scss/bootstrap';
-@import "node_modules/bootswatch/dist/flatly/bootswatch";
+@import "node_modules/bootswatch/dist/litera/bootswatch";
+@import "../sass/bootstrap_override.scss";
