further frontend + cache busting

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,5 @@
 @import '~bootstrap/scss/bootstrap';
 @import "node_modules/bootswatch/dist/litera/bootswatch";
 @import "../sass/bootstrap_override.scss";
+
+@import "../sass/base.scss";
