--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11614,3 +11614,7 @@ table-danger,
   border-radius: 0px !important;
 }
 
+body {
+  background-image: url(/images/email-pattern.png?9eb70efbaed21b63cf35e67d123ae84b);
+}
+
